--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".Account.PhoneAuth"></activity>
+        <activity android:name=".Account.OtpActivity" />
+        <activity android:name=".Account.PhoneAuth" />
         <activity android:name=".Account.ProfileActivity" />
-        <activity android:name=".OurServicesActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".OurServicesActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Account.Register" />
-        <activity android:name=".activities.members.TeamMemberActivity"></activity>
-        <activity android:name=".SplashScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activities.members.TeamMemberActivity" />
+        <activity android:name=".SplashScreen"></activity>
         <activity android:name=".activities.about.About" />
         <activity
             android:name=".Account.LogIn"
@@ -42,19 +37,19 @@
         </activity>
         <activity
             android:name=".activities.DesignPicsActivity"
-            android:parentActivityName=".OurServicesActivity"></activity>
+            android:parentActivityName=".OurServicesActivity" />
         <activity
             android:name=".activities.OtherServicesActivity"
-            android:parentActivityName=".OurServicesActivity"></activity>
+            android:parentActivityName=".OurServicesActivity" />
         <activity
             android:name=".activities.DevelopingAppsActivity"
-            android:parentActivityName=".OurServicesActivity"></activity>
+            android:parentActivityName=".OurServicesActivity" />
         <activity
             android:name=".activities.VideosActivity"
-            android:parentActivityName=".OurServicesActivity"></activity>
+            android:parentActivityName=".OurServicesActivity" />
         <activity
             android:name=".activities.ProfitStrategiesActivity"
-            android:parentActivityName=".OurServicesActivity"></activity>
+            android:parentActivityName=".OurServicesActivity" />
         <activity android:name="activities.members.TeamMemberActivity" />
     </application>
 
