--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
