--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".Account.Register" />
         <activity android:name=".activities.members.TeamMemberActivity" />
         <activity android:name=".SplashScreen"></activity>
-        <activity android:name=".activities.about.About" />
+        <activity android:name=".activities.about.About"
+            android:parentActivityName=".OurServicesActivity"/>
         <activity
             android:name=".Account.LogIn"
             android:label="@string/app_name">
